# RailOSRestAPI

./: LICENSE  README.md  pyproject.toml
database/: create_tables.sql
railosrestapi/: database.py  main.py
