[tool.poetry]
name = "railosrestapi"
version = "0.1.0"
description = "RestAPI for accessing data relating to Railway Operation Simulator"
authors = ["ROSDevTeam"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
